@@ -10,6 +10,7 @@
 #include <limits.h>
 #include <time.h>
 
+#define ALLEGRO_USE_CONSOLE
 #include <allegro5/allegro.h>
 
 #define WINDOW_WIDTH 1200
@@ -38,10 +39,10 @@
 /* This are some code examples to provide a small overview of what can be
  * done with this library. To try out an example uncomment the include
  * and the corresponding function. */
-/*#include "../style.c"*/
-/*#include "../calculator.c"*/
+#include "../style.c"
+#include "../calculator.c"
 #include "../overview.c"
-/*#include "../node_editor.c"*/
+#include "../node_editor.c"
 
 /* ===============================================================
  *
@@ -51,7 +52,7 @@
 static void error_callback(int e, const char *d)
 {printf("Error %d: %s\n", e, d);}
 
-int main(void)
+int real_main(int ac, char **av)
 {
     /* Platform */
     ALLEGRO_DISPLAY *display = NULL;
@@ -94,7 +95,7 @@ int main(void)
 
     /* style.c */
     /*set_style(ctx, THEME_WHITE);*/
-    /*set_style(ctx, THEME_RED);*/
+    set_style(ctx, THEME_RED);
     /*set_style(ctx, THEME_BLUE);*/
     /*set_style(ctx, THEME_DARK);*/
 
@@ -142,9 +143,9 @@ int main(void)
         nk_end(ctx);
 
         /* -------------- EXAMPLES ---------------- */
-        /*calculator(ctx);*/
+        calculator(ctx);
         overview(ctx);
-        /*node_editor(ctx);*/
+        node_editor(ctx);
         /* ----------------------------------------- */
 
         /* Draw */
